--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ once_cell = "1.21"
 
 [workspace]
 resolver = "3"
-members = ["bootstrap"]
+members = [".", "bootstrap"]
 
 [build-dependencies]
 cc = "1.2"
@@ -28,14 +28,11 @@ opt-level = 3
 lto = "fat"
 strip = true
 codegen-units = 1
+panic = "abort"
 
 [build]
 rustflags = ["-C", "target-feature=+fsgsbase"]
 
 [target.'cfg(target_os = "linux")']
 rustflags = ["-C", "link-arg=-nostartfiles"]
-
-[[example]]
-name = "test_lazypoline"
-path = "tests/test_lazypoline.rs"
 
