--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ crate-type = ["cdylib"]
 libc = { version = "0.2", features = ["extra_traits"] }
 nix = "0.29"
 once_cell = "1.21"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [workspace]
 resolver = "3"
