--- a/bootstrap/Cargo.toml
+++ b/bootstrap/Cargo.toml
@@ -12,3 +12,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 libc = "0.2"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
