--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ description = "A framework for building syscall interposers for user-space Linux
 
 [lib]
 name = "lazypoline_rs"
-crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 lazy_static = "1.4"
@@ -42,11 +41,14 @@ panic = "abort"
 [[example]]
 name = "log_syscalls"
 path = "examples/log_syscalls.rs"
+crate-type = ["cdylib"]
 
 [[example]]
 name = "filter_access"
 path = "examples/filter_access.rs"
+crate-type = ["cdylib"]
 
 [[example]]
 name = "override_proc_version"
 path = "examples/override_proc_version.rs"
+crate-type = ["cdylib"]
