--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -2,8 +2,7 @@ max_width = 120
 comment_width = 100
 match_block_trailing_comma = true
 wrap_comments = true
-edition = "2024"
+style_edition = "2024"
 error_on_line_overflow = true
 imports_granularity = "Module"
 hard_tabs = true
-version = "Two"
